certificate https and key verification google map

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=db_vedor
-DB_SPCKET_PATH=/Applications/MAMP/tmp/mysql/mysql.sock
+DB_PASSWORD=password
+DB_DATABASE=db_vidor
+DB_SPCKET_PATH=/var/run/mysqld/mysqld.sock
 FACEBOOK_APP_ID=426581701213953
 FACEBOOK_APP_SECRET=
 GOOGLE_CLIENT_ID=149645064129-4ak9apr77ggqomrrk9ciu0vi2svh23e8.apps.googleusercontent.com
